src/test/ui/rfc-2008-non-exhaustive/uninhabited/match_with_exhaustive_patterns.stderr
error[E0004]: non-exhaustive patterns: type `uninhabited::UninhabitedEnum` is non-empty
  --> $DIR/match_with_exhaustive_patterns.rs:21:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: pattern `UninhabitedStruct` of type `uninhabited::UninhabitedStruct` is not handled
  --> $DIR/match_with_exhaustive_patterns.rs:25:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: pattern `UninhabitedTupleStruct` of type `uninhabited::UninhabitedTupleStruct` is not handled
  --> $DIR/match_with_exhaustive_patterns.rs:29:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: multiple patterns of type `uninhabited::UninhabitedVariants` are not handled
  --> $DIR/match_with_exhaustive_patterns.rs:33:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
